# django-wakawaka

./: .coveragerc  .env  .gitignore  .tool-versions  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README  README.md  README.rst  README.transifex  pyproject.toml  runtestproject.py  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: push.yml
src/wakawaka/: forms.py  models.py  urls.py  views.py
src/wakawaka/locale/da/LC_MESSAGES/: django.mo  django.po
src/wakawaka/locale/en/LC_MESSAGES/: django.mo
src/wakawaka/migrations/: 0001_initial.py
src/wakawaka/templates/wakawaka/: base.html  changes.html  edit.html  page.html  page_list.html  revision_list.html  revision_table.html  revisions.html
src/wakawaka/templatetags/: wakawaka_tags.py
src/wakawaka/urls/: __init__.py
src/wakawaka_project/: manage.py  settings.py  urls.py
src/wakawaka_project/templates/registration/: logged_out.html  login.html
src/wakawaka_project/templates/wakawaka/: base.html
wakawaka/: admin.py  forms.py  models.py  urls.py  views.py
wakawaka/locale/da/LC_MESSAGES/: django.po
wakawaka/locale/de/LC_MESSAGES/: django.po
wakawaka/migrations/: 0001_initial.py  0002_auto_20160409_0645.py  0003_alter_revision_options_alter_wikipage_options_and_more.py
wakawaka/templates/wakawaka/: base.html  edit.html  page.html  page_list.html  revision_table.html
wakawaka/templatetags/: wakawaka_tags.py
wakawaka/tests/: base.py  test_changes.py  test_index.py  test_integrity.py  test_page.py  test_page_list.py  test_revisions.py  test_templatetags.py  test_wakawaka.py
wakawaka/tests/test_project/: settings.py  urls.py  wsgi.py
wakawaka/tests/test_project/templates/: 404.html  500.html
wakawaka/tests/test_project/templates/registration/: logged_out.html  login.html
wakawaka/tests/test_project/templates/wakawaka/: base.html
wakawaka/urls/: __init__.py  authenticated.py
