[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Quality Tools ------------------------------------------------------------------------
[tool.poetry]
name = "django-wakawaka"
version = "1.5"
packages = [{include = "wakawaka"}]
description = "A simple Django based wiki system."
authors = ["Martin Mahner <martin@mahner.org>"]
license = "MIT"
readme = ["README.md", "CHANGELOG.md"]
homepage = "https://github.com/bartTC/django-wakawaka/"
keywords = ["django", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-django = "*"

# Quality Tools ------------------------------------------------------------------------
[tool.ruff]
target-version = "py38"
exclude = ["migrations"]
lint.select = ["ALL"]
lint.ignore = [
  "ANN101",   # Missing Type Annotation for "self"
  "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`"
  "ARG001",   # Unused function argument (request, ...)
  "ARG002",   # Unused method argument (*args, **kwargs)
  "D",        # Missing or badly formatted docstrings
  "FBT",      # Flake Boolean Trap (don't use arg=True in functions)
  "RUF012",   # Mutable class attributes https://github.com/astral-sh/ruff/issues/5243

  "COM812",   # (ruff format) Checks for the absence of trailing commas
  "ISC001",   # (ruff format) Checks for implicitly concatenated strings on a single line
]

[tool.ruff.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"test_*.py" = [
  "S101",     # S101 Use of `assert` detected
  "PLR2004",  # Magic value used in comparison,
]

[tool.pytest.ini_options]
python_files = ["test_*.py",]
addopts = """
    --ds=wakawaka.tests.test_project.settings
    --nomigrations
    --reuse-db
"""
filterwarnings = ["ignore::RuntimeWarning"]
