[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Quality Tools ------------------------------------------------------------------------
[tool.poetry]
name = "django-wakawaka"
version = "1.5"
packages = [{include = "wakawaka"}]
description = "A simple Django based wiki system."
authors = ["Martin Mahner <martin@mahner.org>"]
license = "MIT"
readme = ["README.md", "CHANGELOG.md"]
homepage = "https://github.com/bartTC/django-wakawaka/"
keywords = ["django", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-django = "*"

# Quality Tools ------------------------------------------------------------------------
[tool.ruff]
target-version = "py38"
exclude = ["migrations"]
lint.select = ["ALL"]
lint.ignore = [
  "ANN101",   # Missing Type Annotation for "self"
  "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`"
  "ARG001",   # Unused function argument (request, ...)
  "ARG002",   # Unused method argument (*args, **kwargs)
  "D",        # Missing or badly formatted docstrings
  "FBT",      # Flake Boolean Trap (don't use arg=True in functions)
  "RUF012",   # Mutable class attributes https://github.com/astral-sh/ruff/issues/5243

  "COM812",   # (ruff format) Checks for the absence of trailing commas
  "ISC001",   # (ruff format) Checks for implicitly concatenated strings on a single line
]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"test_*.py" = [
  "S101",     # S101 Use of `assert` detected
  "PLR2004",  # Magic value used in comparison,
]

[tool.pytest.ini_options]
python_files = ["test_*.py",]
addopts = """
    --ds=wakawaka.tests.test_project.settings
    --nomigrations
    --reuse-db
"""
filterwarnings = ["ignore::RuntimeWarning"]

[tool.tox]
legacy_tox_ini = """
[tox]
toxworkdir=/tmp/tox/django-wakawaka
skip_missing_interpreters=True
envlist=
    py{38,39,310,311,312}-django-{32,40,41,42}
    py{310,311,312}-django-{50,51}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
setenv =
    DJANGO_SETTINGS_MODULE=wakawaka.tests.test_project.settings
commands=
    {envbindir}/django-admin collectstatic --noinput -v2
    pytest {envsitepackagesdir}/wakawaka
deps=
    django-32: django==3.2.*
    django-40: django==4.0.*
    django-41: django==4.1.*
    django-42: django==4.2.*
    django-50: django==5.0.*
    django-51: django==5.1.*
    pytest
    pytest-django
"""