[metadata]
name = django-wakawaka
version = 1.1
description =
    django-wakawka is a super simple wiki system written in Python
    using the Django framework.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-wakawaka
keywords = django, pastebin
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11
    tox
    coverage

[isort]
known_first_party = wakawaka
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 5
skip = migrations

[coverage:run]
source = wakawaka
branch = True
omit =
    wakawaka/migrations/*
    wakawaka/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/wakawaka
