[metadata]
name = django-wakawaka
version = 1.2
description =
    django-wakawka is a super simple wiki system written in Python
    using the Django framework.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-wakawaka
keywords = django, pastebin
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
python_requires = >=3.5
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=1.11

[options.extras_require]
tests = 
    pytest
    pytest-cov
    pytest-django

[isort]
known_first_party = wakawaka
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 5
skip = migrations

[coverage:run]
source = wakawaka
branch = True
omit =
    wakawaka/migrations/*
    wakawaka/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/wakawaka

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
addopts =
    --ds=wakawaka.tests.test_project.settings
    --cov=./wakawaka
    --cov-append
    --cov-branch
    --nomigrations
    --reuse-db