[metadata]
name = django-wakawaka
version = 1.3a0
description = A simple Django based wiki system.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-wakawaka
keywords = django, pastebin
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=3.2
